ferrotorch-nn-derive/tests/compile_fail/derive_on_enum.stderr
error: #[derive(Module)] only supports structs
 --> tests/compile_fail/derive_on_enum.rs:9:6
  |
9 | enum NotAStruct<T> {
  |      ^^^^^^^^^^
